--- a/.env
+++ b/.env
@@ -1,5 +1,8 @@
-
 APP_ENV=dev
 APP_SECRET=67de93c4839ff020c73a00d4ce5b6725
 
 DATABASE_URL=sqlite:///%kernel.project_dir%/var/data.db
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$
+###< nelmio/cors-bundle ###
