--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "bref/bref": "^0.5.24",
         "jms/serializer": "^3.6",
         "jms/serializer-bundle": "^3.5",
         "nelmio/cors-bundle": "^2.0",
